# aoc-2020

./: .gitignore  Cargo.toml  new_day.sh
2019/day1_1/src/: main.rs
2019/day1_2/src/: main.rs
2019/day2_1/src/: main.rs
2019/day2_2/: Cargo.toml
2019/day2_2/src/: main.rs
2020/day1/: Cargo.lock.license
2020/day1/src/: main.rs
2020/day1_1/: Cargo.toml
2020/day1_1/src/: main.rs
2020/day1_2/src/: main.rs
aoc_day1/: Cargo.toml
day1/src/: main.rs
input/2020/: day1.txt.license
src/: day1.rs  day2.rs  day3.rs  day4.rs  day4_beautified.rs  day5.rs  day5_beautified.rs  day6.rs  lib.rs  main.rs
