# SPDX-FileCopyrightText: 2020 Florian Warzecha <liketechnik@disroot.org>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "day2_1"
version = "0.1.0"
authors = ["Florian Warzecha <liketechnik@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num-traits = "0.2"
num-derive = "0.3"
